--- a/css/style.css
+++ b/css/style.css
@@ -1,255 +1,155 @@
 @import url("https://fonts.googleapis.com/css?family=Cinzel&display=swap");
 
-
-
-
-
 body {
 
-  background-color: #fff;
+background-color: #fff;
+background: url("../images/guitar.jpg") no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+ background-size: cover;
+margin: 0;
+font-family: 'Cinzel';}
 
-  background: url("../images/guitar.jpg") no-repeat center center fixed;
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  font-family: 'Cinzel';
+}
 
-  -webkit-background-size: cover;
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 
-  -moz-background-size: cover;
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
 
-  -o-background-size: cover;
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
 
-  background-size: cover;
 
-  margin: 0;
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #8C8C8C;
+}
 
-  font-family: 'Cinzel';}
+/* Dropdown content */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
 
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
 
+/* Add a colour background  to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 h1 {
 
-  
-
-  width: 230px;
-
-  height: 180px;
-
-  float: left;
-
-  text-indent: 100%;
-
-  white-space: nowrap;
-
-  overflow: hidden;
-
-  margin: 0;}
-
-
-
+ width: 230px;
+ height: 180px;
+ float: left;
+ text-indent: 100%;
+ white-space: nowrap;
+ overflow: hidden;
+ margin: 0;}
 h2 {
-
-  margin: 1.75em 0 0 0;
-
-  color: #adffda; 
-
-  font-weight: normal;}
-
-
-
+margin: 1.75em 0 0 0;
+color: #0D0D0D; 
+font-weight: normal;}
 h2 + p {
 
-  margin: 0.25em 0 0 0;}
+margin: 0.25em 0 0 0;}
 
 p + p {
-
-  margin: 0;}
+margin: 0;}
 
 p + h2 {
-
-  margin: 10px 0 0 0;}
-
-
-
+margin: 10px 0 0 0;}
 /* message under the logo */
-
-
 
 #message {
 
-  float: left;
-
-  clear: left;
-
-  background-color: #ffb87a;
-
-  color: #ff0000;
-
-  width:170px;
-
-  padding: 18px 30px;
-
-  text-align: center;}
-
-
-
-/* black bar across the right hand side of the page */
-
-
-
+float: left;
+clear: left;
+background-color: #0D0D0D;
+color: #ff0000;
+width:170px;
+padding: 18px 30px;
+text-align: center;}
 #info {
 
-  background-color: #ff0000;
-
-  color: #fff;
-
-  width: 200px;
-
-  padding: 0 15px;
-
+  background-color: #F2F2F2;
+  color:#0D0D0D;
+  width: 120px;
+  padding: 0 10px;
   text-align: center;
-
-  min-height: 100%;
-
+  min-height: 50%;
   position: absolute;
-
-  top: 0;
-
-  right: 15%;}
-
-
-
+  top: 50;
+  right: 0%;}
 /* details in the black bar */
-
-
 
 #clubName {
 
-  text-transform: uppercase;
-
-  text-align: center; 
-
-  font-size: 120%;
-
-  margin-top: 10px;
-
-  border-top: 1px solid #fff;
-
-  border-bottom: 1px solid #fff; 
-
-  padding: 10px 0;}
-
-
+text-transform: uppercase;
+text-align: center; 
+font-size: 120%;
+margin-top: 10px;
+border-top: 1px solid #0D0D0D;
+border-bottom: 1px solid #0D0D0D; 
+padding: 10px 0;}
 
 #concert1 {
 
-  margin-top: 1em; 
-
-  border-top: 1px solid #fff; 
-
-  padding-top: 1em;} 
+margin-top: 1em; 
+border-top: 1px solid #0D0D0D; 
+padding-top: 1em;} 
 
 #concert2 {
 
-  border-bottom: 1px solid #fff; 
-
-  padding-bottom: 1em;}
-
-
+border-bottom: 1px solid #0D0D0D; 
+padding-bottom: 1em;}
 
 #tickets {
 
-  font-size: 440%;
-
-  color: #ffb87a;
-
-  display: inline-block;
-
-  margin: 0;}
-
-
-
-#roomRate{
-
-  text-decoration: line-through;
-
-  display: inline-block;
-
-  float: left;
-
-  padding-top: 10px;}
-
-
-
-#specialRate {  
-
-  font-size: 440%;
-
-  color: #ffb87a;
-
-  display: inline-block;
-
-  padding: 10px 0 20px 0;
-
-  margin: 0;}
-
-
-
-#offerEnds {
-
-  text-transform: uppercase;
-
-  color: #ffb87a;
-
-  font-size: 75%;}
-
-
-
-.true, .false {
-
-  padding: 0 50px 0 50px;
-
-  line-height: 28px;
-
-  text-align: left;
-
-  background-image: url("../images/check-cross.png");
-
-  background-position: 120px 0;
-
-  background-repeat: no-repeat;}
-
-
-
-.false {
-
-  background-position: 120px -28px;}
-
-
-
-/* footer */
-
-
-
-#footer {
-
-  position: absolute;
-
-  bottom: 0;
-
-  left: 0;
-
-  width: 100%;
-
-  background-color: #adffda;}
-
-
-
-#footer p {
-
-  padding: 10px;
-
-  margin: 0;}
-
-
-
-.data {
-
-  padding: 10px;}
+font-size: 440%;
+color: #0D0D0D;
+display: inline-block;
+margin: 0;}
